--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,5 @@
-<p>notfound works!</p>
+<div class="error d-flex justify-content-center align-items-center h-100">
+  <div class=" w-50">
+    <img class="w-100" src="assets/images/error.jpg" alt="" />
+  </div>
+</div>
