--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,12 @@
-<p>profile works!</p>
+<div class="container my-3">
+  <div class="row align-items-center fs-1">
+    <div class="col-md-4">
+      <h2 class="text-success my-4 fs-1">Hope you are Great!</h2>
+      <h5 class=" fs-5 my-2">we are workin 24/7 to make your profile looks awesome like you</h5>
+      <h6 class=" my-2">Thank you for your time</h6>
+    </div>
+    <div class="col-md-8">
+      <img class="w-100" src="assets/images/profile.jpg" alt="" />
+    </div>
+  </div>
+</div>
