--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div (click)="goDetails(product.id)" class="card border-success mx-2">
+<div (click)="goDetails(product.id)" class="card border-success ">
   <div class="position-relative">
     <img
       loading="lazy"
