--- a/src/app/components/featured-product/featured-product.component.html
+++ b/src/app/components/featured-product/featured-product.component.html
@@ -47,7 +47,7 @@
 
 
   <div class="row gy-4">
-    <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let product of allProduct.slice(0,12) ">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12" *ngFor="let product of allProduct.slice(0,12) ">
       <app-product-card [product]="product"></app-product-card>
     </div>
   </div>
