update pro display

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -56,7 +56,7 @@
                 <span class="text-warning">{{ cart.product.quantity }}</span>
                 left
               </h5>
-              <button (click)="removProduct(cart.product._id)" class="btn btn-outline-danger w-25">Remove</button>
+              <button (click)="removProduct(cart.product._id)" class="btn btn-outline-danger ">Remove</button>
             </div>
           </div>
         </div>
