--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -39,13 +39,13 @@
           </h3>
           <hr />
           <div class="d-flex align-items-center">
-            <div
+            <!-- <div
               class="btn border rounded-pill me-4 d-flex w-50 justify-content-between align-items-center"
             >
               <button class="btn fs-5 text-danger">-</button>
               <span class="text-success fs-5 fw-medium">1</span>
               <button class="btn fs-5 text-success">+</button>
-            </div>
+            </div> -->
             <p class="m-0 fw-light">
               Only
               <span class="text-warning fw-medium">{{
@@ -57,7 +57,7 @@
           </div>
           <hr />
           <div class="d-flex">
-            <button class="btn w-50 me-3 fs-5 rounded-pill btn-success">
+            <button disabled class="btn w-50 me-3 fs-5 rounded-pill btn-success">
               Buy Now
             </button>
             <button
